crates/context-macro/tests/constraints/missing_system_program.fail.stderr
error: Using `init` requires including the `Program<System>` account
  --> tests/constraints/missing_system_program.fail.rs:22:9
   |
22 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
